# Hazelnet

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  _c_h_a_n_g_e_l_o_g_8md.html  _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  hzl_8h.html  hzl_8h__dep__incl.map  hzl_8h__dep__incl.md5  hzl_8h__incl.map  hzl_8h__incl.md5  hzl_8h_source.html  hzl___client_8h.html  hzl___client_8h__dep__incl.map  hzl___client_8h__dep__incl.md5  hzl___client_8h__incl.map  hzl___client_8h__incl.md5  hzl___client_8h_source.html  hzl___client_os_8h.html  hzl___client_os_8h__incl.map  hzl___client_os_8h__incl.md5  hzl___client_os_8h_source.html  hzl___server_8h.html  (+31 more)
inc/: hzl.h  hzl_Client.h  hzl_ClientOs.h  hzl_Server.h  hzl_ServerOs.h
search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  functions_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_1.js  variables_4.js  variables_6.js  variables_8.js  variables_9.js  variables_a.js
src/client/: hzl_ClientBuildRequest.c  hzl_ClientBuildSecuredFd.c  hzl_ClientBuildUnsecured.c  hzl_ClientDeinit.c  hzl_ClientFree.c  hzl_ClientGroup.c  hzl_ClientInit.c  hzl_ClientInternal.h  hzl_ClientNew.c  hzl_ClientNewMsg.c  hzl_ClientProcessReceived.c  hzl_ClientProcessReceived.h  hzl_ClientProcessReceivedRenewal.c  hzl_ClientProcessReceivedResponse.c  hzl_ClientProcessReceivedSecuredFd.c  hzl_ClientProcessReceivedSecuredTp.c
src/common/: hzl_CommonAead.c  hzl_CommonAead.h  hzl_CommonBuildRequest.c  hzl_CommonBuildResponse.c  hzl_CommonBuildSecuredFd.c  hzl_CommonBuildUnsecured.c  hzl_CommonCtrDelay.c  hzl_CommonEndian.c  hzl_CommonEndian.h  hzl_CommonHash.c  hzl_CommonHash.h  hzl_CommonHeader.c  hzl_CommonHeader.h  hzl_CommonInternal.h  hzl_CommonMessage.h  hzl_CommonOsNewMsg.c  hzl_CommonOsTime.c  hzl_CommonOsTrng.c  hzl_CommonPacking.c  hzl_CommonPayload.h  hzl_CommonProcessReceivedUnsecured.c  hzl_CommonTimeDelta.c  hzl_CommonUtils.c
src/server/: hzl_ServerBuildSecuredFd.c  hzl_ServerBuildUnsecured.c  hzl_ServerDeInit.c  hzl_ServerForceSessionRenewal.c  hzl_ServerFree.c  hzl_ServerGroup.c  hzl_ServerInit.c  hzl_ServerInternal.h  hzl_ServerNew.c  hzl_ServerNewMsg.c  hzl_ServerProcessReceived.c  hzl_ServerProcessReceived.h  hzl_ServerProcessReceivedRequest.c  hzl_ServerProcessReceivedSecuredFd.c  hzl_ServerRenewalPhase.c
toolsupport/cmake/: compiler_flags.cmake  doxygen.cmake
tst/: hzlTest.h  hzlTest_IoMockup.c
tst/client/: hzlClientTest_BuildRequest.c  hzlClientTest_BuildSecuredFd.c  hzlClientTest_BuildUnsecured.c  hzlClientTest_Constants.c  hzlClientTest_DeInit.c  hzlClientTest_Init.c  hzlClientTest_InitCheckClientConfig.c  hzlClientTest_InitCheckGroupConfigs.c  hzlClientTest_InitCheckIo.c  hzlClientTest_Main.c  hzlClientTest_New.c  hzlClientTest_NewMsg.c  hzlClientTest_ProcessReceived.c  hzlClientTest_ProcessReceivedRenewal.c  hzlClientTest_ProcessReceivedRequest.c  hzlClientTest_ProcessReceivedResponse.c  hzlClientTest_ProcessReceivedSecuredFd.c  hzlClientTest_ProcessReceivedUnsecured.c
tst/client/clientconfigfiles/: Alice.hzl  Bob.hzl  Charlie.hzl  invalidMaxCtrnonceDelay.hzl  invalidSid.hzl  missingGidZero.hzl  tooShortClientConfig.hzl  tooShortGroupsConfig.hzl
tst/interop/: hzlInteropTest_Main.c
tst/server/: hzlServerTest_BuildSecuredFd.c  hzlServerTest_BuildUnsecured.c  hzlServerTest_Constants.c  hzlServerTest_DeInit.c  hzlServerTest_ForceSessionRenewal.c  hzlServerTest_Init.c  hzlServerTest_InitCheckClientConfig.c  hzlServerTest_InitCheckGroupConfigs.c  hzlServerTest_InitCheckIo.c  hzlServerTest_InitCheckServerConfig.c  hzlServerTest_Main.c  hzlServerTest_New.c  hzlServerTest_ProcessReceived.c  hzlServerTest_ProcessReceivedRequest.c  hzlServerTest_ProcessReceivedSecuredFd.c  hzlServerTest_ProcessReceivedServerOnlyMsg.c  hzlServerTest_ProcessReceivedUnsecured.c
tst/server/serverconfigfiles/: Server.hzl  invalidGidOrder.hzl  invalidHeaderType.hzl  invalidLtk.hzl  invalidMaxCtrnonceDelay.hzl  invalidSidOrder.hzl  tooShortClientsConfig.hzl  tooShortGroupsConfig.hzl  tooShortMagicNumber.hzl  tooShortServerConfig.hzl
